test/errors/str_no_none.sl
# str can't be set to none
# expect: COMPERROR
str a = none;
